[package]
name = "tower-pipeline"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "vX.X.X" git tag.
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidpdrsn/tower-pipeline"
homepage = "https://github.com/davidpdrsn/tower-pipeline"
documentation = "https://docs.rs/tower-pipeline/0.1.0"
description = """
A Tower Service combinator that "pipelines" two services
"""
categories = ["asynchronous", "network-programming"]
keywords = ["async", "futures", "service"]
edition = "2018"

[dependencies]
futures-util = "0.3"
pin-project-lite = "0.2"
tower-service = "0.3"

[dev-dependencies]
tokio = { version = "1.2.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
